# plutus-terminal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  log_config.ini  pyproject.toml  requirements.txt
.github/workflows/: release.yml
logs/: .gitignore
plutus_terminal/: __init__.py  log_utils.py  run.py
plutus_terminal/core/: config.py  exceptions.py  password_guard.py  types_.py
plutus_terminal/core/db/: models.py
plutus_terminal/core/exchange/: base.py  helpers.py  types.py  valid_exchanges.py
plutus_terminal/core/exchange/bitget/: exchange.py
plutus_terminal/core/exchange/ccxt/: fetcher.py  trader.py  utils.py
plutus_terminal/core/exchange/foxify/: exchange.py  fetcher.py  funded_exchange.py  funded_fetcher.py  funded_trader.py  options.py  pair_map.json  trader.py  utils.py
plutus_terminal/core/exchange/foxify/abi/: foxify_funded_factory.json  foxify_funded_trader.json  foxify_order_book.json  foxify_position_router.json  foxify_referral_storage.json  foxify_router.json  foxify_time_lock.json  foxify_vault.json
plutus_terminal/core/exchange/web3/: cycle_provider.py  pyth_feed_id.json  web3_utils.py
plutus_terminal/core/news/: base.py  news_manager.py  phoenix_news.py  tree_news.py  types.py
plutus_terminal/core/news/filter/: _actions.py  _filters.py  filter_manager.py  types.py
plutus_terminal/ui/: main_window.py  resources.py  resources.qrc  style.qss  ui_utils.py
plutus_terminal/ui/images/: splash_screen.psd
plutus_terminal/ui/widgets/: account_info.py  account_picker.py  clock.py  decimal_spin_box.py  double_spin_button.py  extra.py  image_web_viewer.py  log_viewer.py  manage_order.py  new_account.py  news_list.py  news_widget.py  options_table.py  options_widget.py  orders_table.py  password_dialog.py  perps_trade.py  pnl_breakdown.py  positions_table.py  toast.py  top_bar_widget.py  trade_table.py  trading_chart.py  user_top_bar.py
plutus_terminal/ui/widgets/config/: __init__.py  account_config.py  config_dialog.py  news_config.py  perps_config.py  terminal_config.py  web3_config.py
